[metadata]
name = inventory
summary = Inventory
description-file =
    README.rst
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = http://www.starlingx.io/
classifier =
    Environment :: StarlingX
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    inventory

[entry_points]
console_scripts =
    inventory-api = inventory.cmd.api:main
    inventory-agent = inventory.cmd.agent:main
    inventory-conductor = inventory.cmd.conductor:main
    inventory-dbsync = inventory.cmd.dbsync:main
    inventory-dnsmasq-lease-update = inventory.cmd.dnsmasq_lease_update:main

oslo.config.opts =
    inventory.common.config = inventory.common.config:list_opts
    inventory.common.api.api_config = inventory.api.api_config:list_opts

inventory.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration

inventory.agent.lldp.drivers =
    lldpd = inventory.agent.lldp.drivers.lldpd.driver:InventoryLldpdAgentDriver
    ovs = inventory.agent.lldp.drivers.ovs.driver:InventoryOVSAgentDriver

inventory.systemconfig.drivers =
    systemconfig = inventory.systemconfig.drivers.sysinv.driver:SysinvSystemConfigDriver

[compile_catalog]
directory = inventory/locale
domain = inventory

[update_catalog]
domain = inventory
output_dir = inventory/locale
input_file = inventory/locale/inventory.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = inventory/locale/inventory.pot
