[metadata]
name = inventoryclient
summary = A python client library for Inventory
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = http://www.starlingx.io/
classifier =
    Environment :: StarlingX
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    inventoryclient

[entry_points]
console_scripts =
    inventory = inventoryclient.shell:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

